--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="item_reminder_content">内容</string>
     <string name="item_reminder_time">时间</string>
     <string name="item_reminder_title">标题</string>
+    <string name="title_activity_classes">ClassesActivity</string>
 </resources>
