reminder without alarm service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="title_activity_settings">设置</string>
     <string name="title_activity_reminders">RemindersActivity</string>
     <string name="item_reminder_content">内容</string>
-    <string name="item_reminder_time">时间</string>
+    <string name="item_reminder_time">2016/12/10 14:20</string>
     <string name="item_reminder_title">标题</string>
     <string name="title_activity_classes">ClassesActivity</string>
 
